--- a/noticia.html
+++ b/noticia.html
@@ -43,27 +43,27 @@
 
     <section class="news">
         <div class="news-item">
-            <img src="noticia1.jpg" alt="Inundaciones en Costa Rica">
+            <img src="Noticias/Inundaciones.jpg" alt="Inundaciones en Costa Rica">
             <p>Ya son 114 los centros educativos afectados por fuertes lluvias en el Caribe.</p>
         </div>
         <div class="news-item">
-            <img src="noticia2.jpg" alt="Fenómeno climático">
+            <img src="Noticias/Fenomeno climatico.jpg" alt="Fenómeno climático">
             <p>Fenómeno de El Niño aumenta riesgos de sequías en Guanacaste.</p>
         </div>
         <div class="news-item">
-            <img src="noticia3.jpg" alt="Tormenta tropical">
+            <img src="Noticias/Tormenta tropical.jpg" alt="Tormenta tropical">
             <p>Tormenta tropical deja comunidades incomunicadas en el Pacífico Sur.</p>
         </div>
         <div class="news-item">
-            <img src="noticia4.jpg" alt="Cambio climático">
+            <img src="Noticias/Cambio climatico.jpeg" alt="Cambio climático">
             <p>Estudio alerta sobre el impacto del cambio climático en el Valle Central.</p>
         </div>
         <div class="news-item">
-            <img src="noticia5.jpg" alt="Emergencia climática">
+            <img src="Noticias/Emergencias Medicas.jpg" alt="Emergencia climática">
             <p>Emergencia climática: Más de 300 familias afectadas por deslizamientos.</p>
         </div>
         <div class="news-item">
-            <img src="noticia6.jpg" alt="Preparativos ante lluvias">
+            <img src="Noticias/Preparacion para lluvias.jpg" alt="Preparativos ante lluvias">
             <p>Autoridades intensifican preparativos ante lluvias en la Zona Norte.</p>
         </div>
     </section>
