Seccion de comunidad
Diseño de la seccion de comunidad

--- a/noticia.html
+++ b/noticia.html
@@ -27,7 +27,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="noticias.html">Noticias</a></li>
+            <li><a href="noticia.html">Noticias</a></li>
             <li><a href="recomendaciones.html">Recomendaciones</a></li>
             <li><a href="alertas.html">Alertas</a></li>
             <li><a href="comunidad.html">Comunidad</a></li>
